syntax = "proto3";

package weatherQuery;

message WeatherQueryRequest {
  string request = 1;
}