syntax = "proto3";

package weatherQuery;

message WeatherQueryResponse {
  string response = 1;
}